// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Game> creates grid based on width and height 1`] = `
<div
  className="gridContainer"
>
  <div>
    <div
      className="header"
    >
      <div
        className="timer"
      >
         
      </div>
    </div>
    <table
      className="grid"
    >
      <tbody>
        <tr
          className="row"
        >
          <Cell
            char="K"
            onSelectEnd={[Function]}
            onSelectOver={[Function]}
            onSelectStart={[Function]}
            selected={false}
            x={0}
            y={0}
          />
          <Cell
            char="R"
            onSelectEnd={[Function]}
            onSelectOver={[Function]}
            onSelectStart={[Function]}
            selected={false}
            x={1}
            y={0}
          />
        </tr>
        <tr
          className="row"
        >
          <Cell
            char="I"
            onSelectEnd={[Function]}
            onSelectOver={[Function]}
            onSelectStart={[Function]}
            selected={false}
            x={0}
            y={1}
          />
          <Cell
            char="E"
            onSelectEnd={[Function]}
            onSelectOver={[Function]}
            onSelectStart={[Function]}
            selected={false}
            x={1}
            y={1}
          />
        </tr>
      </tbody>
    </table>
  </div>
  <div />
</div>
`;

exports[`<Game> has header 1`] = `
<div
  className="gridContainer"
>
  <div>
    <div
      className="header"
    >
      <div
        className="timer"
      >
         
      </div>
    </div>
    <table
      className="grid"
    >
      <tbody />
    </table>
  </div>
  <div />
</div>
`;
